[gd_scene load_steps=5 format=3 uid="uid://bmdgvrysu17nw"]

[ext_resource type="Script" path="res://scripts/end_menu.gd" id="1_xawui"]
[ext_resource type="Texture2D" uid="uid://cbafyueswodq6" path="res://assets/images/EndScreen.png" id="2_44y5x"]

[sub_resource type="LabelSettings" id="LabelSettings_20xcj"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_shgh2"]
font_color = Color(0, 0, 0, 1)

[node name="EndMenu" type="Node2D"]
script = ExtResource("1_xawui")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_44y5x")
expand_mode = 2
stretch_mode = 6

[node name="Label" type="Label" parent="."]
offset_left = 137.0
offset_top = 17.0
offset_right = 465.0
offset_bottom = 110.0
text = "SPACE BABY!"
label_settings = SubResource("LabelSettings_20xcj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 911.0
offset_top = 48.0
offset_right = 1007.0
offset_bottom = 114.0

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Timer" type="HBoxContainer" parent="."]
offset_left = 847.0
offset_top = 15.0
offset_right = 1070.0
offset_bottom = 38.0
alignment = 1

[node name="Label" type="Label" parent="Timer"]
layout_mode = 2
text = "Time:"
label_settings = SubResource("LabelSettings_shgh2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueLabel" type="Label" parent="Timer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_shgh2")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
